fix purpose spacing

--- a/src/scss/_connect.scss
+++ b/src/scss/_connect.scss
@@ -14,7 +14,6 @@
 
   .split {
     @include grid-row();
-    @include grid-column($columns:12);
     margin-top: rem-calc(50px);
     margin-bottom: rem-calc(20px);
 
