--- a/src/scss/_purpose.scss
+++ b/src/scss/_purpose.scss
@@ -14,7 +14,6 @@
 
   .belief {
     @include grid-row();
-    @include grid-column($columns:12);
     margin-bottom: rem-calc(40px);
 
     aside {
